src/content/docs/sdk/ios/v4/features/short-links-zh.mdx
---
title: "解析品牌化短链接"
description: "解析在 Campaign Lab 中创建的短链接。"
slug: "zh/sdk/ios/v4/features/short-links"
---

Adjust 的[短链接解决方案](https://help.adjust.com/zh/article/short-branded-links)能将复杂的长链接变成简洁的短链接。短链接会保留深度链接和推广活动信息，如果用户尚未安装您的应用，则会将用户转到应用商店。

使用本节中描述的方法来解析您的短链接。

## 在 Adjust SDK 中设置深度链接 {#set-up-deep-linking-in-the-adjust-sdk}

在 Adjust SDK 中添加对以下内容的支持：

-  [URI 方案](/zh/sdk/ios/features/deep-links/direct)
-  [延迟深度链接](/zh/sdk/ios/features/deep-links/deferred)

<Callout type="note">

您无需设置 LinkMe 或[链接解析](/zh/sdk/ios/features/deep-links/resolution)即可使用 Adjust 短链接解决方案。

</Callout>

## 设置 Adjust SDK 来解析短链接 {#set-up-the-adjust-sdk-to-resolve-short-links}

<CodeBlock title="方法签名">

```objc
+ (void)processDeeplink:(nonnull NSURL *)deeplink
      completionHandler:(void (^_Nonnull)(NSString * _Nonnull resolvedLink))completionHandler;
```

</CodeBlock>

从 `AppDelegate` 中调用 `processDeeplink:completionHandler:` 方法来解析将用户深度链接至应用的 Adjust 短 URL 。

```objc
- (BOOL)application:(UIApplication *)application continueUserActivity:(NSUserActivity *)userActivity restorationHandler:(void (^)(NSArray<id<uiuseractivityrestoring>> *restorableObjects))restorationHandler {
    if ([[userActivity activityType] isEqualToString:NSUserActivityTypeBrowsingWeb]) {
        // Pass deep link URL to Adjust in order to potentially reattribute the user
        // and to get the URL resolved if it’s a shortened one.
        [Adjust processDeeplink:[userActivity webpageURL]
                completionHandler:^(NSString * _Nonnull resolvedLink) {
            // resolvedLink contains either resolved URL (if it was unshortened)
            // or just echoed URL if it was not shortened
        }];
    }
    return YES;
}
```

如果您发送至`processDeeplink:completionHandler:`方法的链接为短链接，那么`resolvedLink`就会返回延长后的原始链接。如果您传递给该方法的链接未被缩短，那么`resolvedLink`包含的链接与您传递的链接相同。
