src/content/docs/sdk/ios/v5/features/short-links-zh.mdx
---
title: "解析品牌化短链接"
description: "解析在 Campaign Lab 中创建的短链接。"
slug: "en/sdk/ios/features/short-links"
versions: 
    - 
        label: "v5"
        value: "v5"
        default: true
    - 
        label: "v4"
        value: "v4"
redirects: 
    v4: "/en/sdk/ios/v4/features/short-links"
---
Adjust 的[短链接解决方案](https://help.adjust.com/en/article/short-branded-links)能将复杂的长链接变成简洁的短链接。短链接会保留深度链接和推广活动信息，如果用户尚未安装您的应用，则会将用户转到应用商店。

使用本节中描述的方法来解析您的短链接。

在 Adjust SDK 中设置深度链接\{\#set\-up\-deep\-linking\-in\-the\-adjust\-sdk\}
--------------------------------------------------------------------------------

在 Adjust SDK 中添加对以下内容的支持：

* [URI 方案](/en/sdk/ios/features/deep-links/direct)
* [延迟深度链接](/en/sdk/ios/features/deep-links/deferred)

<callout type="note"> 

您无需设置 LinkMe 或[链接解析](/en/sdk/ios/features/deep-links/resolution)即可使用 Adjust 短链接解决方案。
</Callout> 

设置 Adjust SDK 来解析短链接\{\#set\-up\-the\-adjust\-sdk\-to\-resolve\-short\-links\}
-----------------------------------------------------------------------------------------

<codeblock title="方法签名"> 

```objc
+ (void)processAndResolveDeeplink:(nonnull NSURL *)deeplink
            withCompletionHandler:(nonnull ADJResolvedDeeplinkBlock)completion;
```

</CodeBlock> 

从 `AppDelegate` 中调用 `processAndResolveDeeplink:completionHandler:` 方法来解析将用户深度链接至应用的 Adjust 短 URL 。
<tabs> <tab title="Swift"> 

```swift

func application(_ application: UIApplication, continue userActivity: NSUserActivity, restorationHandler: @escaping ([any UIUserActivityRestoring]?) -> Void) -> Bool {
      if userActivity.activityType.isEqual(NSUserActivityTypeBrowsingWeb) {
          // Pass deep link URL to Adjust in order to potentially reattribute the user
          // and to get the URL resolved if it’s a shortened one.
         if let incomingURL = userActivity.webpageURL {
              if let deeplink = ADJDeeplink(deeplink: incomingURL) {
                  Adjust.processAndResolve(deeplink) { resolveDeeplink in
                      // resolvedLink contains either resolved URL (if it was unshortened)
                      // or just echoed URL if it was not shortened
                  }
              }
          }
      }
    return true
}

```

</Tab> <tab title="Objective-C"> 

```objc
- (BOOL)application:(UIApplication *)application continueUserActivity:(NSUserActivity *)userActivity restorationHandler:(void (^)(NSArray<id<uiuseractivityrestoring id="sl-md0000000">> *restorableObjects))restorationHandler {
    if ([[userActivity activityType] isEqualToString:NSUserActivityTypeBrowsingWeb]) {
        // Pass deep link URL to Adjust in order to potentially reattribute the user
        // and to get the URL resolved if it’s a shortened one.
        ADJDeeplink *deeplink = [[ADJDeeplink alloc] initWithDeeplink:[userActivity webpageURL]];
        [Adjust processAndResolveDeeplink:deeplink
                withCompletionHandler:^(NSString * _Nullable resolvedLink) {
            // resolvedLink contains either resolved URL (if it was unshortened)
            // or just echoed URL if it was not shortened
        }];
    }
    return YES;
}
```

</Tab> </Tabs> 

如果您发送至`processDeeplink:completionHandler:`方法的链接为短链接，那么`resolvedLink`就会返回延长后的原始链接。如果您传递给该方法的链接未被缩短，那么`resolvedLink`包含的链接与您传递的链接相同。

